Issue SB-11758 fix: Search box on mobile devices

--- a/src/app/client/src/assets/styles/component/_search.scss
+++ b/src/app/client/src/assets/styles/component/_search.scss
@@ -11,6 +11,7 @@
 
   &.small {
     min-width: 282px;
+    width: 100%;
   }
 
   &:focus-within {
